--- a/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.WPFClient/MainWindow.xaml
+++ b/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.WPFClient/MainWindow.xaml
@@ -22,6 +22,8 @@
             </ListBox.ItemTemplate>
         </ListBox>
         <StackPanel Grid.Column="1" >
+            <Label Content="Name: " Background="LightBlue" Padding="10"/>
+            <TextBox Text="{Binding SelectedAuthor.Name}" Padding="10" Margin="0,0,0,30"/>
             <Button Content="Create Author" Command="{Binding CreateAuthorCommand}" Margin="10" Padding="10"/>
             <Button Content="Delete Author" Command="{Binding DeleteAuthorCommand}" Margin="10" Padding="10"/>
             <Button Content="Update Author" Command="{Binding UpdateAuthorCommand}" Margin="10" Padding="10"/>
