Data bindings added

--- a/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.WPFClient/LentingWindow.xaml
+++ b/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.WPFClient/LentingWindow.xaml
@@ -5,8 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HL6RQ1_HFT_2022231.WPFClient"
         mc:Ignorable="d"
-        Title="LentingWindow" Height="450" Width="800">
+        Title="Lenting Editor" Height="450" Width="800">
+    <Window.DataContext>
+        <local:LentingWindowViewModel/>
+    </Window.DataContext>
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <ListBox ItemsSource="{Binding Lentings}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Label Content="{Binding Name}"/>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </Grid>
 </Window>
