--- a/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.WPFClient/BookWindow.xaml
+++ b/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.WPFClient/BookWindow.xaml
@@ -14,7 +14,7 @@
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <ListBox ItemsSource="{Binding Books}">
+        <ListBox ItemsSource="{Binding Books}" SelectedItem="{Binding SelectedBook}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Label Content="{Binding Title}"/>
