--- a/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.WPFClient/LentingWindow.xaml
+++ b/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.WPFClient/LentingWindow.xaml
@@ -14,12 +14,17 @@
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <ListBox ItemsSource="{Binding Lentings}">
+        <ListBox ItemsSource="{Binding Lentings}" SelectedItem="{Binding SelectedLenting}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Label Content="{Binding Name}"/>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+        <StackPanel Grid.Column="1">
+            <Button Content="Create Lenting" Command="{Binding CreateLentingCommand}" Margin="10" Padding="10"/>
+            <Button Content="Delete Lenting" Command="{Binding DeleteLentingCommand}" Margin="10" Padding="10"/>
+            <Button Content="Update Lenting" Command="{Binding UpdateLentingCommand}" Margin="10" Padding="10"/>
+        </StackPanel>
     </Grid>
 </Window>
