--- a/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.JSClient/wwwroot/style.css
+++ b/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.JSClient/wwwroot/style.css
@@ -17,3 +17,22 @@ th, td {
 th{
     background-color:blanchedalmond;
 }
+
+#formdiv{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+#formdiv label, button, input{
+    margin: 10px;
+    padding: 5px;
+}
+
+#formdiv label{
+    font-weight: bolder;
+}
+
+table button{
+    padding: 2px;
+}
