--- a/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.JSClient/wwwroot/style.css
+++ b/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.JSClient/wwwroot/style.css
@@ -18,7 +18,22 @@ th{
     background-color:blanchedalmond;
 }
 
-#formdiv{
+#updateformdiv {
+    display: none;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+    #updateformdiv label, button, input {
+        margin: 10px;
+        padding: 5px;
+    }
+
+    #updateformdiv label {
+        font-weight: bolder;
+    }
+
+#formdiv {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
